<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg">

    <include layout="@layout/item_toobar"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"
                    android:layout_margin="@dimen/common_margin"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_input_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin">

                    <EditText
                        android:id="@+id/phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/common_text"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="@dimen/common_input_padding"
                        android:layout_marginLeft="@dimen/big_margin"
                        android:layout_marginRight="@dimen/big_margin"
                        android:hint="@string/username_hint"
                        android:inputType="text"/>

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/verification_input_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_margin"
                        android:layout_weight="4">

                        <EditText
                            android:id="@+id/verification_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/small_text"
                            android:fontFamily="sans-serif"
                            android:hint="@string/verification"
                            android:inputType="number"
                            android:paddingLeft="@dimen/common_input_padding"
                            android:textSize="@dimen/common_text" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_verification"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="@dimen/big_margin"
                        android:layout_weight="2"
                        android:background="@drawable/common_btn_bg"
                        android:gravity="center"
                        android:text="@string/send_verification" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin">

                    <EditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/big_margin"
                        android:layout_marginRight="@dimen/big_margin"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/common_input_padding"
                        android:textSize="@dimen/common_text" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/carNum_input_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin">

                    <EditText
                        android:id="@+id/carNum_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/big_margin"
                        android:layout_marginRight="@dimen/big_margin"
                        android:fontFamily="sans-serif"
                        android:hint="@string/carNum"
                        android:paddingLeft="@dimen/common_input_padding"
                        android:textSize="@dimen/common_text" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
                </ScrollView>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_register"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:layout_marginRight="@dimen/big_margin"
                    android:background="@drawable/common_btn_bg"/>

        </LinearLayout>

</RelativeLayout>